clusters/base/my-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-api
  namespace: my-app
  labels:
    app: my-api
    istio.io/global: "true"
    istio.io/use-waypoint: waypoint
spec:
  selector:
    app: my-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
